# mio

./: CMakeLists.txt  CONTRIBUTING.txt  LICENSE.txt
.github/workflows/: linux.yaml  macos.yml  windows.yml
app/: main.c
app/data/: cube.off
example/: main.c
example/data/: cube.stl
include/mio/: mio.h  obj.h  off.h  ply.h  stl.h
source/: mio.c  obj.c  off.c  ply.c  stl.c
tests/: CMakeLists.txt  test_mio.cpp
